NYU-IDM-Web-Development/Week-11/style.css
:root{
    --gradient: linear-gradient(
        #b5c99a,
        #cfe1b9,
        #e9f5db
    );
}

/* *{ Star means everything
    margin: 0;
    padding: 0;
} */

html, body{
    margin: 0;
    padding: 0;
}

h1{
    text-align: center;
    font-family: 'Neucha', cursive;
    margin: 0px;
    padding: 20px;
    font-size: 8vh;
    overflow: hidden;
    object-fit: contain;
    text-shadow: -2px 5px 6px rgba(92,179,88,0.6);
    animation: sideToSide 2s ease-in-out alternate infinite;
}

h3{
    font-family: 'Viga', sans-serif;
    font-size: 3vh;
    text-shadow: -2px 5px 6px rgba(92,179,88,0.6);
    margin-left: 25px;
    margin-top: 25px;
    transition: 2s;
}

ul, p{
    font-family: 'Viga', sans-serif;
    margin-left: 25px;
}

img{
    position: relative;
    max-height: 100%;
    max-width: 100%;
    object-fit: contain;
    opacity: 0%;
    transition: 2s;
}

#wrapper{
    background: var(--gradient);
    display: flex;
    flex-direction: column;
}

/* #title_wrapper{ } Wrapper present in case animation should change*/

#psuedo_code{
    font-family: 'Plus Jakarta Sans', sans-serif;
    margin-left: 50px;
}

.section_wrapper{
    background: #f0ead2;
    border-radius: 40px;
    margin: 30px;
    object-fit: contain;
    overflow: hidden;
}

.img_container{
    display: flex;
    justify-content: center;
}

h3:hover{
    font-size: 5vh;
}

img:hover{
    opacity: 100%;
}

@keyframes scaleBigSmall{
    0%{ font-size: 8vh; }
    100%{ font-size: 10vh; }
}
 
@keyframes sideToSide{
    0%{ transform: translateX(-2vw); }
    100%{ transform: translateX(2vw);}
}

